# FINM-25000-Homework-1

./: .gitignore  README.md  app.py  connector.py  pyproject.toml
