[tool.poetry]
name = "finm-25000-homework-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "finm_25000_homework_1"}]

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.34.2"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
